[gd_scene load_steps=58 format=2]

[ext_resource path="res://Script/AreaType.gd" type="Script" id=1]
[ext_resource path="res://Sprite/DurrrSpaceShip.png" type="Texture" id=2]
[ext_resource path="res://Script/Player.gd" type="Script" id=3]
[ext_resource path="res://Sprite/booster/0009.png" type="Texture" id=4]
[ext_resource path="res://Sprite/booster/0010.png" type="Texture" id=5]
[ext_resource path="res://Sound/crash.ogg" type="AudioStream" id=6]
[ext_resource path="res://Sound/correct.wav" type="AudioStream" id=7]
[ext_resource path="res://Sprite/booster/0011.png" type="Texture" id=8]
[ext_resource path="res://Sprite/booster/0002.png" type="Texture" id=9]
[ext_resource path="res://Sprite/booster/0001.png" type="Texture" id=10]
[ext_resource path="res://Sprite/booster/0006.png" type="Texture" id=11]
[ext_resource path="res://Sprite/booster/0007.png" type="Texture" id=12]
[ext_resource path="res://Sprite/booster/0005.png" type="Texture" id=13]
[ext_resource path="res://Sprite/booster/0004.png" type="Texture" id=14]
[ext_resource path="res://Sprite/booster/0008.png" type="Texture" id=15]
[ext_resource path="res://Sprite/booster/0003.png" type="Texture" id=16]
[ext_resource path="res://Sprite/booster/0032.png" type="Texture" id=17]
[ext_resource path="res://Sprite/booster/0048.png" type="Texture" id=18]
[ext_resource path="res://Sprite/booster/0037.png" type="Texture" id=19]
[ext_resource path="res://Sprite/booster/0033.png" type="Texture" id=20]
[ext_resource path="res://Sprite/booster/0035.png" type="Texture" id=21]
[ext_resource path="res://Sprite/booster/0045.png" type="Texture" id=22]
[ext_resource path="res://Sprite/booster/0049.png" type="Texture" id=23]
[ext_resource path="res://Sprite/booster/0040.png" type="Texture" id=24]
[ext_resource path="res://Sprite/booster/0027.png" type="Texture" id=25]
[ext_resource path="res://Sprite/booster/0028.png" type="Texture" id=26]
[ext_resource path="res://Sprite/booster/0031.png" type="Texture" id=27]
[ext_resource path="res://Sprite/booster/0042.png" type="Texture" id=28]
[ext_resource path="res://Sprite/booster/0026.png" type="Texture" id=29]
[ext_resource path="res://Sprite/booster/0043.png" type="Texture" id=30]
[ext_resource path="res://Sprite/booster/0046.png" type="Texture" id=31]
[ext_resource path="res://Sprite/booster/0047.png" type="Texture" id=32]
[ext_resource path="res://Sprite/booster/0023.png" type="Texture" id=33]
[ext_resource path="res://Sprite/booster/0038.png" type="Texture" id=34]
[ext_resource path="res://Sprite/booster/0020.png" type="Texture" id=35]
[ext_resource path="res://Sprite/booster/0050.png" type="Texture" id=36]
[ext_resource path="res://Sprite/booster/0041.png" type="Texture" id=37]
[ext_resource path="res://Sprite/booster/0034.png" type="Texture" id=38]
[ext_resource path="res://Sprite/booster/0019.png" type="Texture" id=39]
[ext_resource path="res://Sprite/booster/0021.png" type="Texture" id=40]
[ext_resource path="res://Sprite/booster/0036.png" type="Texture" id=41]
[ext_resource path="res://Sprite/booster/0039.png" type="Texture" id=42]
[ext_resource path="res://Sprite/booster/0044.png" type="Texture" id=43]
[ext_resource path="res://Sprite/booster/0025.png" type="Texture" id=44]
[ext_resource path="res://Sprite/booster/0018.png" type="Texture" id=45]
[ext_resource path="res://Sprite/booster/0024.png" type="Texture" id=46]
[ext_resource path="res://Sprite/booster/0022.png" type="Texture" id=47]
[ext_resource path="res://Sprite/booster/0030.png" type="Texture" id=48]
[ext_resource path="res://Sprite/booster/0029.png" type="Texture" id=49]
[ext_resource path="res://Sprite/booster/0012.png" type="Texture" id=50]
[ext_resource path="res://Sprite/booster/0014.png" type="Texture" id=51]
[ext_resource path="res://Sprite/booster/0015.png" type="Texture" id=52]
[ext_resource path="res://Sprite/booster/0016.png" type="Texture" id=53]
[ext_resource path="res://Sprite/booster/0013.png" type="Texture" id=54]
[ext_resource path="res://Sprite/booster/0017.png" type="Texture" id=55]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 105.109, 98.9419 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 50 ), ExtResource( 54 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 55 ), ExtResource( 45 ), ExtResource( 39 ), ExtResource( 35 ), ExtResource( 40 ), ExtResource( 47 ), ExtResource( 33 ), ExtResource( 46 ), ExtResource( 44 ), ExtResource( 29 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 49 ), ExtResource( 48 ), ExtResource( 27 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 38 ), ExtResource( 21 ), ExtResource( 41 ), ExtResource( 19 ), ExtResource( 34 ), ExtResource( 42 ), ExtResource( 24 ), ExtResource( 37 ), ExtResource( 28 ), ExtResource( 30 ), ExtResource( 43 ), ExtResource( 22 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 18 ), ExtResource( 23 ), ExtResource( 36 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[node name="Player" type="Node2D"]
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 1 )
areaType = "Player"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Tween" type="Tween" parent="."]

[node name="ShipSprite" type="Sprite" parent="."]
position = Vector2( -0.629959, 2.31938 )
scale = Vector2( 2.5, 2.5 )
z_index = 1
z_as_relative = false
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="ShipSprite"]
position = Vector2( 0, 50.297 )
scale = Vector2( 0.0776519, 0.0776519 )
z_as_relative = false
frames = SubResource( 2 )
frame = 22
playing = true
flip_v = true

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="CorrectJingle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 8.0

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
